--- a/.github/workflows/03-example.yaml
+++ b/.github/workflows/03-example.yaml
@@ -2,7 +2,7 @@ name: example-workflow
 on: [push]
 jobs:
   production-deploy:
-    if: github.repository == 'actions-joindevop/github-actions-practice'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
