--- a/.github/workflows/04.yaml
+++ b/.github/workflows/04.yaml
@@ -8,8 +8,4 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '14'
-      - run: npm install -g bats
+      - run: sleep 15
